@@ -40,6 +40,7 @@
           (http://www.packetfence.org/mantis/view.php?id=628)
         added Test::Perl::Critic tests
         added tests for compilation of PHP scripts
+        added tests for compilation of CGI scripts
 
 1.8.1
         authorized @ as first symbol in password
